--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/particlex"]
 	path = themes/particlex
-	url = https://github.com/ZhouBlackDuck/hexo-theme-particlex.git
+	url = git@github.com:ZhouBlackDuck/hexo-theme-particlex.git
