--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 syntax_highlighter:
@@ -104,6 +104,3 @@ theme: particlex
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
-
-# Convert markdown image path
-hexo-asset-folder: true
