--- a/.github/workflows/page.yml
+++ b/.github/workflows/page.yml
@@ -49,6 +49,10 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
+      - name: Install Pandoc
+        uses: pandoc/actions/setup@v1
+        with:
+          version: 3.6.3
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
