--- a/_config.yml
+++ b/_config.yml
@@ -108,3 +108,17 @@ deploy:
 # Archive Generator
 archive_generator:
   enabled: true
+
+# Pandoc
+pandoc:
+  # pandoc_path: ./pandoc
+  extra:
+    - no-highlight:
+  extensions:
+    - +abbreviations
+    - +autolink_bare_uris
+    - +emoji
+    - +hard_line_breaks
+    - -implicit_figures
+    - +mark
+    - +short_subsuperscripts
