--- a/.github/workflows/page.yml
+++ b/.github/workflows/page.yml
@@ -33,6 +33,10 @@ jobs:
             ${{ runner.OS }}-npm-cache
       - name: Install Dependencies
         run: npm install
+      - name: Install Pandoc
+        uses: pandoc/actions/setup@v1
+        with:
+          version: 3.6.3
       - name: Build
         run: npm run build
       - name: Upload Pages artifact
